backend/k8s/clusters/local/apps/traefik/golf-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints: [traefik]
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: dashboard-auth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
